--- a/package.json
+++ b/package.json
@@ -11,12 +11,24 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@types/react": "~18.2.45",
+    "dev-dependency": "^1.1.0",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.2",
-    "react-native-web": "^0.19.10"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-web": "^0.19.10",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
